Game now fully works.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
             <tbody id="GameTable">
             </tbody>
         </table>
+        <h1 onclick="window. location. reload()">Restart?</h1>
     </body>
 </html>
